update index.html + - point

--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
             </div>
             <div class="buttons">
                 <div class="leftside">
-                    <button onclick="addleft()" class="add">+1</button>
-                    <button onclick="minusleft()" class="minus">-1</button>
+                    <button onclick="addleft()" class="add">+</button>
+                    <button onclick="minusleft()" class="minus">-</button>
 
                 </div>
                 <div class="rightside">
-                    <button onclick="addright()" class="add">+1</button>
-                    <button onclick="minusright()" class="minus">-1</button>
+                    <button onclick="addright()" class="add">+</button>
+                    <button onclick="minusright()" class="minus">-</button>
 
                 </div>
             </div>
